--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/starlight": "^0.12.0",
     "@astrojs/starlight-tailwind": "^2.0.1",
     "@astrojs/tailwind": "^5.0.0",
+    "@fontsource/roboto": "^5.0.8",
     "astro": "^3.2.3",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3",
